--- a/PrivacyScriptsTests/Resources.resx
+++ b/PrivacyScriptsTests/Resources.resx
@@ -124,4 +124,7 @@
   <data name="sitenotice3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\sitenotice3.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="themesJS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\themes.js;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
 </root>
